<resources>
    <array name="categoriasSp">
        <item>Familia</item>
        <item>Nombres</item>
        <item>Dias</item>
        <item>Materias</item>
        <item>Partes del cuerpo</item>
    </array>

    <string name="app_name">FlashWord</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="usern">{userName}</string>
    <string name="empecemos">Empecemos!</string>
    <string name="categorias">Categorias</string>
    <string name="animales">Animales</string>


    <string name="frutas">Frutas</string>
    <string name="partesdelcuerpos">Partes del cuerpo</string>
    <string name="registrarmeLogin"><u>Registrarme</u></string>
    <string name="empezar">Empezar</string>

    <string name="title_activity_game">GameActivity</string>
    <string name="tab_text_1">Palabra 1</string>
    <string name="tab_text_2">Palabra 2</string>
    <string name="tab_text_3">Palabra 3</string>
    <string name="tab_text_4">Palabra 4</string>
    <string name="tab_text_5">Palabra 5</string>
    <string name="registraPalabra">Registra la palabra</string>
    <string name="ingresaLaPalabra">Ingresa la palabra</string>
    <string name="word">Palabra</string>
    <string name="categoria">Selecciona la categoria</string>
    <string name="cancelar">Volver</string>
    <string name="guardar">Guardar</string>

    <string name="grabaraudio">Grabar audio</string>
    <string name="mensaje1">¿Quién quiere jugar hoy?</string>
    <string name="nombre">Nombre</string>
    <string name="registrar">Registrar</string>

    <string name="genero1">Masculino</string>
    <string name="genero2">Femenino</string>
    <string name="addword">Añadir palabras</string>
    <string name="powerby">Powered by</string>
    <string name="fechaNacimiento">Fecha de nacimiento</string>
    <string name="title_activity_menu_admin">MenuAdminActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verFase">Ver Fase</string>
    <string name="editarUsuarios">Editar Usuarios</string>
    <string name="editarPalabras">Editar Palabras</string>
    <string name="anadirCategorias">Añadir categorias</string>
    <string name="nameCategoria">Nombre de la categoria</string>
    <string name="title_add_user">Añadir usuario</string>
    <string name="title_list_user">Listar usuarios</string>
    <string name="title_start_game">Toca dos veces</string>
    <string name="title_error_one">No hay categorias (Clic aquí para registrar)</string>

</resources>
