<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_white_app"
    tools:context=".controller.MenuActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btnAddUSer"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg_azul"
            android:text="@string/title_add_user"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnAddWord"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg_azul"
            android:text="@string/addword"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnListUser"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg_azul"
            android:text="@string/title_list_user"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnIrAddCateg"
            android:layout_width="180dp"
            android:layout_height="150dp"
            android:layout_margin="5dp"
            android:background="@drawable/bg_azul"
            android:text="@string/anadirCategorias"
            android:textAllCaps="false"
            android:textColor="@android:color/background_dark"
            android:textSize="14sp"
            android:textStyle="bold" />
    </androidx.gridlayout.widget.GridLayout>

    <ImageView
        android:id="@+id/btnCloseMenuAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.976"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.044"
        app:srcCompat="@drawable/logo_exit" />

</androidx.constraintlayout.widget.ConstraintLayout>